# cmake-gtest-example

./: CMakeLists.txt  README.md  main.cpp
lib/: CMakeLists.txt  algo.cpp  algo.h
test/: CMakeLists.txt  algo_test.cpp  simple_test.cpp
util/: CMakeLists.txt  buzz.cpp  buzz.h
util/bar/: CMakeLists.txt  bar.cpp  bar.h
util/foo/: CMakeLists.txt  foo.cpp  foo.h
